# tree-sitter-devicetree

./: .editorconfig  .gitattributes  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.zig  build.zig.zon  eslint.config.mjs  go.mod  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yaml  lint.yml  publish.yaml
bindings/c/: tree-sitter-devicetree.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_devicetree/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDevicetreeTests/: TreeSitterDevicetreeTests.swift
bindings/zig/: root.zig  test.zig
src/: grammar.json  node-types.json  parser.c
test/corpus/: address.txt  delete.txt  labels.txt  nodes.txt  properties.txt
