[package]
name = "tree-sitter-devicetree"
description = "Tree-sitter parser for Devicetree files, with support for Zephyr's superset of Devicetree syntax."
version = "0.15.0"
authors = ["Joel Spadin"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "devicetree"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/joelspadin/tree-sitter-devicetree"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
